syntax = "proto3";

package game;

//获取个人简介内容
message MsgGetPlayerIntroduction
{
	  string playerIntroduction = 1;
}

//保存个人简介内容
message MsgSavePlayerIntroduction
{
	  string palyerIntroduction = 1;
	  int32 result = 2;
}

//获取头像
message MsgGetHeadPhoto
{
	  int32 headPhoto = 1;
}

//保存头像
message MsgSaveHeadPhoto
{
	   int32 headPhoto = 1;
	   int32 result = 2;
}

//发送消息到世界
message MsgSendMessageToWord
{
	  string message = 1;
	  string id = 2;
	  int32 result = 3;
}

//发送消息到好友
message MsgSendMessageToFriend
{
	  string message = 1;
	  string id = 2;
	  string friendId = 3;
	  int32 result = 4;
}

//获取好友列表
message MsgGetFriendList
{
                  string friendList = 1;
	  int32 result = 2;
}

//删除好友
message MsgDeleteFriend
{
                  string friendId = 1;
	  string id = 2;
	  int32 result = 3;
}

//添加好友
message MsgAddFriend
{
                  string friendId = 1;
	  string id = 2;
	  int32 result = 3;
}

//同意添加好友
message MsgAcceptAddFriend
{
                  string friendId = 1;
	  string id = 2;
	  int32 result = 3;
}